# djb_hash

./: .coveralls.yml  .rusty-release.toml  .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: djbx33a.rs  djbx33a_php.rs  djbx33a_u32.rs  djbx33a_u32_php.rs  djbx33x.rs  djbx33x_u32.rs  lib.rs  x33a.rs  x33a_php.rs  x33a_u32.rs  x33a_u32_php.rs  x33x.rs  x33x_u32.rs
