[package]
name = "djb_hash"
version = "0.1.0"
authors = ["Michael Cummings <mgcummings@yahoo.com>"]
description = "Rust library of commonly used Daniel J. Bernstein style hash functions."
homepage = "https://github.com/Dragonrun1/djb_hash"
keywords = ["DJB", "hash", "PHP", "x33a", "x33x"]
license="BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Dragonrun1/djb_hash"
[dependencies]
